Bug fixed in scheduler, general cleaning in mhlib

--- a/demo-schedtest/makefile
+++ b/demo-schedtest/makefile
@@ -1,7 +1,7 @@
 # makefile for building the qap example
 # written by Guenther Raidl and Daniel Wagner
 
-# default location of EALIB is parent directory
+# default location of MHLIB is parent directory
 ifndef MHLIB
   MHLIB=..
 endif
