--- a/makefile.common
+++ b/makefile.common
@@ -15,13 +15,16 @@ else
 AR=ar
 endif
 
+GIT_VERSION := $(shell git describe --abbrev=4 --dirty --always --tags)
+
 DEFS=-std=c++11 -pthread # -static -static-libgcc -static-libstdc++
 
+CCFLAGS=-pipe -Wall -Wno-deprecated -DVERSION=\"$(GIT_VERSION)\" $(DEFS)
 ifndef O4
-CCFLAGS=-pipe -Wall -Wno-deprecated $(DEFS)  -g
-#CCFLAGS=-pipe -Wall -Wno-deprecated $(DEFS) -pg
+CCFLAGS += -g
+#CCFLAGS += -pg
 else
-CCFLAGS=-pipe -Wall -Wno-deprecated $(DEFS) -O4
+CCFLAGS += -O4
 endif
 
 ifndef USEFPIC
