Polishing comments to avoid warnings in doxygen

--- a/doxy.cfg
+++ b/doxy.cfg
@@ -38,7 +38,7 @@ PROJECT_NAME           = mhlib
 # could be handy for archiving the generated documentation or if some version
 # control system is used.
 
-PROJECT_NUMBER         = "Version 4.0"
+#PROJECT_NUMBER         = "Version 4.0"
 
 # Using the PROJECT_BRIEF tag one can provide an optional one line description
 # for a project that appears at the top of each page and should give viewer a
@@ -840,7 +840,7 @@ EXCLUDE_SYMBOLS        =
 EXAMPLE_PATH           = . \
                          demo-onemax/onemax.C \
                          demo-qap/qap.C \
-                         demo-qap/qapchrom.C \
+                         demo-qap/qapsol.C \
                          demo-qap/qapfeature.C \
                          demo-qap/qapinstance.C \
                          demo-qap/qaptabuattribute.C \
