Diverse polishing: mh_param: pstring replaced by string, mh_hash: removed, mh_param: parameter names may be specified with leading '-' and '--', standard parameter access made more efficient, schedtest.C: renamed to demo-sched

--- a/demo-schedtest/makefile
+++ b/demo-schedtest/makefile
@@ -9,11 +9,11 @@ endif
 include $(MHLIB)/makefile.common
 CCFLAGS += -L$(MHLIB) -I$(MHLIB)
 
-EXE=schedtest
+EXE=demo-sched
 
 HEADERS=
 
-SRCS=schedtest.C
+SRCS=demo-sched.C
 
 OBJS=$(SRCS:.C=.o)
 
