--- a/doxy.cfg
+++ b/doxy.cfg
@@ -38,7 +38,7 @@ PROJECT_NAME           = mhlib
 # could be handy for archiving the generated documentation or if some version
 # control system is used.
 
-#PROJECT_NUMBER         = "Version 4.0"
+#PROJECT_NUMBER         = 
 
 # Using the PROJECT_BRIEF tag one can provide an optional one line description
 # for a project that appears at the top of each page and should give viewer a
@@ -768,8 +768,8 @@ INPUT                  = . \
                          demo-qap/qapfeature.C \
                          demo-qap/qapinstance.C \
                          demo-qap/qaptabuattribute.C \
-                         demo-schedtest \
-                         demo-schedtest/schedtest.C
+                         demo-sched \
+                         demo-sched/sched.C
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
@@ -844,7 +844,7 @@ EXAMPLE_PATH           = . \
                          demo-qap/qapfeature.C \
                          demo-qap/qapinstance.C \
                          demo-qap/qaptabuattribute.C \
-                         demo-schedtest/schedtest.C
+                         demo-sched/sched.C
 
 # If the value of the EXAMPLE_PATH tag contains directories, you can use the
 # EXAMPLE_PATTERNS tag to specify one or more wildcard pattern (like *.cpp and
