--- a/demo-sched/makefile
+++ b/demo-sched/makefile
@@ -1,5 +1,4 @@
-# makefile for building the qap example
-# written by Guenther Raidl and Daniel Wagner
+# makefile for building this application
 
 # default location of MHLIB is parent directory
 ifndef MHLIB
