--- a/demo-qap/makefile
+++ b/demo-qap/makefile
@@ -2,9 +2,9 @@
 # written by Guenther Raidl and Daniel Wagner
 
 # default location of MHLIB is parent directory
-ifndef MHLIB
+#ifndef MHLIB	# remove comments for applications outside mhlib directory
   MHLIB=..
-endif
+#endif
 
 include $(MHLIB)/makefile.common
 CCFLAGS += -L$(MHLIB) -I$(MHLIB)
