Basic test script added

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,4 +10,4 @@ pipelines:
               script: # Modify the commands below to build your repository.
                     # - ./configure
                     - make
-                    # - make test
+                    - make test
