--- a/makefile.common
+++ b/makefile.common
@@ -1,5 +1,5 @@
-# makefile for building the mh library
-# written by Guenther Raidl and Daniel Wagner
+# common makefile definitions for the mhlib
+# vim: filetype=make
 
 # If USE_CPP is set use this compiler, otherwise standard g++
 ifdef USE_CPP
