sfile parameters in demo removed, outStream::getFileName added and outStream initialization refined accordingly

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,14 @@
 **/*.exe
 **/*.a
 **/*.dll
+**/*.sol
+**/*.sum
+**/*.par
 demo-onemax/onemax
 demo-qap/qap
 demo-sched/sched
 demo-maxsat/maxsat
 demo-recsched/recsched
 .Rproj.user
+.Rhistory
+irace2/exec/
